--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5,10 +5,12 @@ body {
 #symbol {
     font-size: 2em;
 }
+
 .board {
     margin: auto;
     width: 350px;
 }
+
 .board button {
     height: 100px;
     width: 100px;
@@ -22,4 +24,8 @@ body {
 
 #messages {
     font-size: 1.9em;
+}
+
+.green {
+    color: green;
 }
